# nixcbs

./: .gitignore  Cargo.toml  README.md
dataset/init/: tables.sql
dataset/mockup/: mock.sql
src/: main.rs
src/domain/model/account/: account.rs  account_type.rs  mod.rs
src/domain/model/customer/: customer_profile.rs  customer_ref.rs
src/domain/model/transaction/: interest_posting.rs  mod.rs  transaction.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: auth.rs  azure_kv_auth.rs  connector.rs  env_auth.rs  mod.rs
