[package]
name = "nixcbs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
pretty_env_logger = "0.5"
log = "0.4"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
anyhow = "1.0"
